<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/nav_book"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recent_books"
            android:icon="@drawable/ic_recent"
            android:title="@string/recent_books" />
        <item
            android:id="@+id/nav_bookshelf"
            android:icon="@drawable/ic_bookshelf"
            android:title="@string/book_shelf" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_setting"
            android:title="@string/setting" />
    </group>
</menu>