<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.filemanager.ui.FileManagerActivity">

    <LinearLayout
        android:id="@+id/header_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lavender"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/ic_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_arrow"
            android:padding="10dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/file_manager"
            android:textColor="@color/white"
            android:layout_gravity="center"/>
    </LinearLayout>
    <TextView
        android:id="@+id/manager_referent_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingVertical="5dp"
        android:text="Which area of your phone do you want to designate for books and documents?"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_manager" />

    <Button
        android:id="@+id/btn_add_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_single_file"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_select_folder" />

    <Button
        android:id="@+id/btn_select_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_doc_folder"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manager_referent_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>